[All] Improve conciseness